fixed author photo alignment on essay page

--- a/wp-content/themes/tmr/style.css
+++ b/wp-content/themes/tmr/style.css
@@ -1154,6 +1154,11 @@ img.essay-thumb {
 	margin-right: 1em;
 }
 
+div.author-bio {
+	float: l;
+	
+}
+
 div.fb-like {
  
 	width: 110px;
